plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.kanban'
version = '0.0.2-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Sentry
    implementation 'io.sentry:sentry-spring-boot-starter-jakarta:7.3.0'

    // Dotenv
    implementation 'me.paulschwarz:spring-dotenv:4.0.0'

    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Rate Limiting
    implementation 'com.bucket4j:bucket4j-core:8.0.1'

    // Redis Cache
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-cache'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // AWS S3
    implementation 'software.amazon.awssdk:s3:2.25.0'

    // AWS CloudWatch
    implementation 'software.amazon.awssdk:cloudwatch:2.25.0'

    // Image Thumbnail
    implementation 'net.coobird:thumbnailator:0.4.20'

    // FFmpeg (Video Thumbnail)
    implementation 'net.bramp.ffmpeg:ffmpeg:0.8.0'

    // Google OAuth2
    implementation 'com.google.api-client:google-api-client:2.2.0'

    // Firebase Admin (FCM Push Notifications)
    implementation 'com.google.firebase:firebase-admin:9.3.0'

    // Database
    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'com.h2database:h2'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // DevTools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

processResources {
    filesMatching('application.yml') {
        def gitCommit = 'git rev-parse --short HEAD'.execute().text.trim() ?: 'unknown'
        def buildTime = java.time.Instant.now().toString()
        filter { line ->
            line.replace('@git.commit@', gitCommit)
                .replace('@build.time@', buildTime)
        }
    }
}
